refactor: entryService - entryApplicationService 중복 제거 및 정리